# adventures-in-opencl

./: .clang-format  CMakeLists.txt  CMakeSettings.json  Doxyfile  LICENSE  README.md
naive_approach/: CMakeLists.txt  kernel.cl  main.cpp
part_2/: CMakeLists.txt  kernel.cl  main.cpp  painters_partition.py
reduce_optimisation/: CMakeLists.txt  add_numbers_kernel.cl  base_add_kernel.cl  base_sum_kernel.cl  benchmark_runner.cpp  kernel.cl  looped_sum_kernel.cl  main.cpp  todo.md
shared/: clext.h
shared/custom/: basic_headers.h  cl_utilities.h  clext.h  common.h
shared/ocl_template/: exceptions.hpp  input.hpp  kernel.hpp
shared/system/CL/: cl_platform.h
summing_numbers/: CMakeLists.txt  kernel.cl  main.cpp
test_ocl_template/: CMakeLists.txt
test_ocl_template/src/: kernel.cpp
